--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-tabs": "^3.2.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tabs": "^2.3.4",
     "@types/styled-components": "^5.1.23"
   }
 }
