deployed gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gentjanaD.github.io/Menu-App",
+  "homepage": "http://gentjanaD.github.io/From-The-Oven",
   "name": "new-menu-app",
   "version": "0.1.0",
   "private": true,
